<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tankování</string>
    <string name="title_section0">Vozidlo</string>
    <string name="title_section1">Záznamy</string>
    <string name="title_section2">Statistiky</string>
    <string name="title_section3">O aplikaci</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="save">uložit</string>
    <string name="record_add">přidat nový záznam</string>
    <string name="record_delete">smazat záznamy</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_activity2">MainActivity2</string>

    <!-- add new record -->
    <string name="tank_add_new_record">Tankováno (l)</string>
    <string name="volume_add_new_record">Stav nádrže (l)</string>
    <string name="odometer_add_new_record">Stav tachometru (km)</string>
    <string name="location_add_new_record">Místo</string>
    <string name="time_add_new_record">Čas</string>
    <string name="today_add_new_record">Dnes</string>

    <string name="required">Pole je povinné!</string>
    <string name="required_warning">Vyplňte všechna povinná políčka!</string>

    <string name="record_added">Záznam byl přidán!</string>
    <string name="vehicle_added">Vozdilo bylo uloženo!</string>
    <string name="vehicle_no_exist">Vozidlo nebylo definováno</string>

    <!--Delete record-->
    <string name="record_deleted">Záznam byl smazán!</string>

</resources>
