<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/app_background"
    tools:context="com.portilo.app.AddNewRecordActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:background="@drawable/shape"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:weightSum="5"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/tank_add_new_record"
                        android:id="@+id/textView"
                        android:layout_weight="3"/>

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:layout_weight="2"
                        android:ems="10"
                        android:id="@+id/volumeEditText"
                        android:gravity="end"
                        android:focusable="true"
                        android:clickable="true"
                        android:focusableInTouchMode="true"
                        android:textIsSelectable="false"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:weightSum="5"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/volume_add_new_record"
                        android:id="@+id/textView1"
                        android:layout_weight="3"/>

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/tankEditText"
                        android:gravity="end"
                        android:layout_weight="2"
                        android:textIsSelectable="false"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:weightSum="5"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/odometer_add_new_record"
                        android:id="@+id/textView2"
                        android:layout_weight="3"/>

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/odometerEditText"
                        android:textIsSelectable="false"
                        android:layout_weight="2"
                        android:gravity="end"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:weightSum="1"
                    android:layout_marginTop="10dp">

                    <Button
                        android:id="@+id/timeButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="?android:attr/buttonBarButtonStyle"
                        android:text="@string/time_add_new_record"
                        android:onClick="showTimePickerDialog" />

                    <Button
                        android:id="@+id/dateButton"
                        android:layout_width="match_parent"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_height="wrap_content"
                        android:text="@string/today_add_new_record"
                        android:onClick="showDatePickerDialog" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:minHeight="20dp">
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:background="@drawable/shape"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/location_add_new_record"
                    android:id="@+id/textView5"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/locationEditText"
                    android:lines="4"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>



</RelativeLayout>
